Fixed underlying issue for collapsing card causing scroll position to be off in topic images SMH

--- a/src/components/topic-images/topic-images.css
+++ b/src/components/topic-images/topic-images.css
@@ -1,6 +1,6 @@
 .images-body {
   display: block;
-  height: calc(100% - 50px);
+  height: 100%;
   width: 100%;
   border-radius: 25px 25px 0px 0px;
   overflow: auto;
@@ -27,25 +27,6 @@
   scroll-behavior: auto;
   scroll-snap-type: y mandatory;
   background: black;
-}
-
-.canvas-footer, .canvas-footer-fullscreen {
-  height: 50px;
-  width: 100%;
-  bottom: 0;
-  border-top: 0.5px solid dimgray;
-}
-
-.canvas-footer {
-  position: absolute;
-  border-radius: 0 0 25px 25px;
-}
-
-.canvas-footer-fullscreen {
-  position: fixed;
-  z-index: 3;
-  border-left: 0.5px solid dimgray;
-  border-right: 0.5px solid dimgray;
 }
 
 .show-add-image-button, .hide-add-image-button {
